PENV-478: cosmetics mistakes
